<resources>
    <string name="app_name">ATM</string>
    <string name="insert_card_instruction">PLEASE INSERT YOUR CARD</string>
    <string name="btn_insert_card_text">card inserted</string>
    <string name="account_number_hint">enter account number</string>
    <string name="insert_card_instruction_two">insert your card to begin transaction</string>
    <string name="choice_instruction">what would you like to do?</string>
    <string name="radio_btn_withdraw">Withdraw</string>
    <string name="radio_btn_enquiry">Enquiry</string>
    <string name="btn_choice_continue">Continue</string>
    <string name="btn_choice_cancel">Cancel</string>
    <string name="withdraw_title">WITHDRAW AMOUNT</string>
    <string name="withdraw_instruction">Select an amount to withdraw</string>
    <string name="btn_withdraw_continue">Continue</string>
    <string name="btn_withdraw_cancel">Cancel</string>
    <string name="ten_thousand">₦10,000</string>
    <string name="five_thousand">₦5,000</string>
    <string name="two_thousand">₦2,000</string>
    <string name="other_amount">Other</string>
    <string name="processing_withdraw_text">Processing... please wait</string>
    <string name="cancel_processinh_withdrae">Cancel</string>
    <string name="click_to_withdraw">click to withdraw</string>
    <string name="naira_symnol">₦</string>
    <string name="enter_amount">Enter amount</string>
    <string name="transaction_successful_title">TRANSACTION SUCCESSFUL</string>
    <string name="transaction_details_title">Transaction details</string>
    <string name="naira_symbol">₦</string>
    <string name="available_balance_label">Available balance</string>
    <string name="location_label">Location</string>
    <string name="perform_another_transaction">perform another transaction</string>
    <string name="end">End</string>
    <string name="enter_your_pin">ENTER YOUR PIN</string>
    <string name="enter_pin_instruction">your pin is required for authentication</string>
    <string name="btn_enter_pin_label">Enter</string>
    <string name="btn_cancel_pin">Cancel</string>
    <string name="balance_inquiry_title">BALANCE INQUIRY</string>
    <string name="available_balance_title">Available balance</string>
    <string name="loading">Loading...</string>
    <string name="transaction_history">Transaction history</string>
    <string name="btn_perform_another_transaction">perform another transaction</string>
    <string name="no_transaction">No transaction made yet</string>
</resources>
