<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.example.android.atm.ui.viewmodels.WithdrawViewModel"/>
    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.WithdrawFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:text="@string/btn_withdraw_continue"
                    style="@style/normalButton"
                    android:id="@+id/button5"
                    android:layout_width="238dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="@{()->viewModel.getAmount()}"
                    android:layout_marginTop="72dp"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    app:layout_constraintHorizontal_bias="0.523"/>
            <Button
                    android:text="@string/btn_withdraw_cancel"
                    style="@style/outlineButton"
                    android:layout_width="238dp"
                    android:id="@+id/button6"
                    android:onClick="@{()->viewModel.cancel()}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.522"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/button5"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/withdraw_title"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/textView"/>

            <TextView
                    android:text="@string/withdraw_instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginTop="24dp"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    app:layout_constraintHorizontal_bias="0.498"
                    android:id="@+id/radioGroup"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">
                <RadioButton
                        android:text="@string/ten_thousand"
                        android:layout_width="wrap_content"
                        android:onClick="@{()->viewModel.setAmount(String.valueOf(10000))}"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton1"
                        android:textSize="24sp"/>
                <RadioButton
                        android:text="@string/five_thousand"
                        android:textSize="24sp"
                        android:onClick="@{()->viewModel.setAmount(String.valueOf(5000))}"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton2"/>

                <RadioButton
                        android:text="@string/two_thousand"
                        android:layout_marginTop="20dp"
                        android:onClick="@{()->viewModel.setAmount(String.valueOf(2000))}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton3"
                        android:textSize="24sp"/>
                <RadioButton
                        android:text="@string/other_amount"
                        android:textSize="24sp"
                        android:onClick="@{()->viewModel.setAmount(`other`)}"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton5"/>

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>