<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.example.android.atm.ui.viewmodels.OtherAmountViewModel"/>
    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:text="@string/enter_amount"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:text="@string/naira_symnol"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                app:validate="@{viewModel.status}"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/editTextContent"
                    android:inputType="number"
                    android:text="@={viewModel.amount}"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:layout_gravity="center"
                style="@style/normalButton"
                android:id="@+id/enter"
                android:onClick="@{()->viewModel.submitAmount()}"
                android:text="@string/click_to_withdraw"/>

    </LinearLayout>
</layout>