<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.example.android.atm.ui.viewmodels.BalanceViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context=".ui.fragments.BalanceFragment">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/balance_inquiry_title"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/textView"/>
        <TextView
                android:text="@string/available_balance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:textSize="18sp"
                android:textColor="@android:color/black"/>
        <TextView
                android:text="@string/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textSize="24sp"
                app:text="@{viewModel.balance}"
                android:textColor="@android:color/black"/>
        <TextView
                android:text="@string/transaction_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginTop="12dp"/>
        <Button
                android:text="@string/btn_perform_another_transaction"
                android:layout_width="wrap_content"
                android:id="@+id/cancel"
                android:onClick="@{()->viewModel.cancel()}"
                style="@style/normalButton"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:listitem="@layout/transaction_item"
                android:id="@+id/recycler"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/cancel"/>
        <TextView
                android:text="@string/no_transaction"
                app:visible_empty="@{viewModel.empty}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/recycler"
                app:layout_constraintTop_toTopOf="@+id/recycler"
                android:textSize="18sp"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                app:visible="@{viewModel.transactions}"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/recycler"
                app:layout_constraintTop_toTopOf="@+id/recycler"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>