<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.example.android.atm.ui.viewmodels.TransactionSuccessfulViewModel"/>
    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.TransactionSuccessfulFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/transaction_successful_title"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/textView"/>

            <TextView
                    android:text="@string/transaction_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintHorizontal_bias="0.497"/>
            <TextView
                    tools:text="13,000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:text="@{viewModel.amount}"
                    android:textColor="@android:color/black"
                    android:textSize="36sp"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintEnd_toEndOf="@+id/textView11"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"/>
            <TextView
                    android:text="Date:"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:id="@+id/textView9"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="@+id/textView"/>
            <TextView
                    tools:text="12th june 2019 11:12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:textSize="18sp"
                    android:text="@{viewModel.date}"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="@+id/textView9"/>
            <TextView
                    android:text="@string/naira_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"/>
            <TextView
                    android:text="@string/available_balance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="@+id/textView9"/>
            <TextView
                    tools:text="₦10,000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:text="@{viewModel.balance}"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView13"/>
            <TextView
                    tools:text="Lagos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.location}"
                    android:id="@+id/textView15"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintTop_toBottomOf="@+id/textView14"
                    app:layout_constraintStart_toStartOf="@+id/textView14"/>
            <Button
                    android:text="@string/perform_another_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancel"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="44dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView15"
                    app:layout_constraintHorizontal_bias="0.498"/>
            <Button
                    android:text="@string/end"
                    android:id="@+id/button8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.53"
                    style="@style/outlineButton"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/cancel"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>