<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.example.android.atm.ui.viewmodels.WelcomeViewModel"/>
        <variable
                name="transactionType"
                type="com.example.android.atm.ui.viewmodels.WelcomeViewModel.TransactionType"/>
    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.WelcomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@{`Welcome ` + viewModel.customerName}"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/textView"/>

            <TextView
                    android:text="@string/choice_instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginTop="24dp"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <Button
                    android:text="@string/btn_choice_continue"
                    android:layout_width="238dp"
                    style="@style/normalButton"
                    android:id="@+id/button3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="@{()->viewModel.getTransactionType()}"
                    android:layout_marginTop="72dp"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    app:layout_constraintHorizontal_bias="0.523"/>
            <Button
                    android:text="@string/btn_choice_cancel"
                    style="@style/outlineButton"
                    android:layout_width="238dp"
                    android:id="@+id/cancel"
                    app:layout_constraintStart_toStartOf="parent"
                    android:onClick="@{()->viewModel.cancel()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/button3"/>
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:gravity="start"
                    android:layout_marginTop="72dp"
                    app:layout_constraintHorizontal_bias="0.498"
                    android:id="@+id/radioGroup">

                <RadioButton
                        android:text="@string/radio_btn_withdraw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton6"
                        android:textSize="24sp"
                        android:onClick="@{()->viewModel.setTransactionType(transactionType.TYPE_WITHDRAW)}"
                        android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/radio_btn_enquiry"
                        android:textSize="24sp"
                        android:onClick="@{()->viewModel.setTransactionType(transactionType.TYPE_BALANCE)}"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton5"
                        android:layout_weight="1"/>
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>