<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.example.android.atm.ui.viewmodels.EnterPinViewModel"/>
    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.EnterPinFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/enter_your_pin"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/textView"/>

            <com.chaos.view.PinView
                    android:layout_width="wrap_content"
                    app:itemCount="4"
                    app:itemHeight="48dp"
                    app:itemRadius="4dp"
                    android:text="@={viewModel.pin}"
                    app:itemSpacing="8dp"
                    app:itemWidth="48dp"
                    app:viewType="rectangle"
                    app:lineColor="@color/colorPrimary"
                    android:cursorVisible="false"
                    style="@style/PinWidget.PinView"
                    android:inputType="numberPassword"
                    android:layout_height="wrap_content"
                    android:id="@+id/pinView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.526"/>

            <TextView
                    android:text="@string/enter_pin_instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textSize="18sp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <Button
                    android:text="@string/btn_enter_pin_label"
                    style="@style/normalButton"
                    android:id="@+id/button"
                    android:onClick="@{()->viewModel.validatePin()}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.517"
                    app:layout_constraintTop_toBottomOf="@+id/pinView"
                    android:layout_marginTop="32dp"/>
            <Button
                    android:text="@string/btn_cancel_pin"
                    android:layout_width="238dp"
                    style="@style/outlineButton"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>